[gd_scene load_steps=3 format=3 uid="uid://fmt5111t1dfe"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_5j1hx"]
[ext_resource type="Texture2D" uid="uid://l8vjxvlllnl4" path="res://images/MenuBackground.png" id="2_6ycx0"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("1_5j1hx")

[node name="MenuBackground" type="TextureRect" parent="."]
z_index = -5
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6ycx0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -181.5
offset_top = -340.0
offset_right = 181.5
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "ENTER NICKNAME:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameInput" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(58, 58)
layout_mode = 2
theme_override_font_sizes/font_size = 36

[node name="IPLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "ENTER SERVER IP:"
horizontal_alignment = 1

[node name="IPInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36

[node name="PortLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "ENTER SERVER PORT:"
horizontal_alignment = 1

[node name="PortInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "JOIN"

[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
